[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyturbseq"
version = "0.0.15"
description = "A Python package for perturbational single-cell data"
readme = "README.md"
authors = [
    { name = "Aidan Winters", email = "aidanw@arcinstitute.org" }
]
dependencies = [
    "scanpy>=1.9,<1.10",
    "scipy>=1.10,<1.11",
    "scikit-learn>=1.3,<1.4",
    "umap-learn>=0.5,<0.6",
    "numpy>=1.23,<1.24",
    "pandas>=1.5,<2.0",
    "matplotlib>=3.7,<3.8",
    "seaborn>=0.13,<0.14",
    "tqdm>=4.66,<5",
    "fastcluster>=1.2,<2",
    "adjusttext>=1.0,<2",
    "pydeseq2>=0.3.6,<0.4",
    "statsmodels>=0.13.5,<0.14",
    "adpbulk>=0.1.4,<0.2",
    "anndata>=0.8,<0.10",
    "hdbscan>=0.8,<0.9",
    "dcor>=0.6,<0.7"
]
requires-python = ">=3.8,<3.12"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0"
]

[tool.setuptools.packages.find]
include = ["pyturbseq*"]
exclude = ["archive*"]

[project.urls]
repository = "https://github.com/aidanwinters/pyturbseq"